--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit
 google-generativeai
-langchain-community
-ollama
-requests
-beautifulsoup4
-pandas
-fpdf2
+fpdf
 pyttsx3
 SpeechRecognition
+pandas
+requests
+beautifulsoup4
 openpyxl
+stability-sdk
+Pillow
