--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 streamlit
 google-generativeai
+beautifulsoup4
+requests
 fpdf
 pyttsx3
-SpeechRecognition
-pandas
-requests
-beautifulsoup4
+speechrecognition
+pyaudio
 openpyxl
-stability-sdk
+pandas
 Pillow
 moviepy
+pydub
+
