--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
 streamlit
 google-generativeai
-beautifulsoup4
-requests
 fpdf
 pyttsx3
-speechrecognition
-pyaudio
-openpyxl
+SpeechRecognition
 pandas
+requests
+beautifulsoup4
+openpyxl
+stability-sdk
 Pillow
-moviepy
-pydub
-
