--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ openpyxl
 pyttsx3 ; platform_system != "Linux"
 SpeechRecognition ; platform_system != "Linux"
 pyaudio ; platform_system == "Windows"
+pyaudio
+
