--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
+\# Core requirements
 streamlit
 google-generativeai
 requests
 beautifulsoup4
 fpdf
-pyttsx3
-SpeechRecognition
 pandas
 Pillow
 stability-sdk
 openpyxl
+
+# Voice features (platform-specific)
 pyttsx3 ; platform_system != "Linux"
 SpeechRecognition ; platform_system != "Linux"
 pyaudio ; platform_system == "Windows"
-pyaudio
-
