--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ pandas
 Pillow
 stability-sdk
 openpyxl
-pyaudio
-PyAudio
+pyttsx3 ; platform_system != "Linux"
+SpeechRecognition ; platform_system != "Linux"
+pyaudio ; platform_system == "Windows"
